--- a/SceneParser/SceneParser.csproj
+++ b/SceneParser/SceneParser.csproj
@@ -44,13 +44,15 @@
     <Compile Include="Compression.cs" />
     <Compile Include="Enumerators\Battle.cs" />
     <Compile Include="Helpers\EndianConverter.cs" />
+    <Compile Include="Interface\ByteHandler.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Parsers\SceneBinHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\ScenePossitionInfo.cs" />
     <Compile Include="Structures\Scene\Attack.cs" />
-    <Compile Include="Structures\Scene\BattleFormation.cs" />
     <Compile Include="Structures\Scene\BattleSetup.cs" />
+    <Compile Include="Structures\Scene\Battle\BattleSquareFormations.cs" />
+    <Compile Include="Structures\Scene\Battle\FormationID.cs" />
     <Compile Include="Structures\Scene\Camera.cs" />
     <Compile Include="Structures\Scene\Enemy.cs" />
     <Compile Include="Structures\Scene\FormationAI.cs" />
